[metadata]
name = dropt-util
#version = 0.1
description = DrOpt utility package
url = https://github.com/NeuralScope/dropt-util/
author = Haopin Wu
author_email = psistwu@outlook.com
license = MIT
keywords = DrOpt, utility
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules


[options]
setup_requires =
    setuptools >=42.0.0
    setuptools_scm >=3.4.0
    wheel >=0.33.0
install_requires =
#   setuptools >=42.0.0
    requests >=2.22.0
python_requires = >=3.5
package_dir =
    =src
packages = find_namespace:


[options.packages.find]
where = src
